--- a/manuscript/FinalDraft3/msv7.tex
+++ b/manuscript/FinalDraft3/msv7.tex
@@ -204,31 +204,29 @@ As $m \rightarrow 0.5$, the populations are perfectly mixed, acting as a single 
 We used the discrete Ricker framework described by Shelton and Mangel \citep{Shelton:2011eq} as the basis for our two-site metapopulation model, with the added effect of the local population $N_i$ mixing with a set proportion $m$ of a remote population $N_j$ that is straying into it.
 In this sense, both populations serve simultaneously as donor and recipient populations.
 We first assumed that a proportion ${\rm e}^{-Z}$ of both populations survive such that the surviving aggregated population, composed of both local individuals (at site $i$) and incoming strays (from site $j$), is $\left((1-m)N_i(t) + m N_j(t) \right){\rm e}^{-Z}$.
-Because local individuals will recruit differently than incoming strays, the recruitment of the aggregate must incorporate two recruitment functions, given by $R_i[w_i\mu_i(t) + (1-w_i)\mu_j(t)]\left((1-m)N_i + mN_j\right)$ (Eq. \ref{eq:R}).
+Because local individuals will recruit differently than incoming strays, the recruitment of the aggregate must incorporate two recruitment functions, given by $R_i[\omega_i\mu_i(t) + (1-\omega_i)\mu_j(t)]\left((1-m)N_i + mN_j\right)$ (Eq. \ref{eq:R}).
 This mix of individuals is subject to identical compensatory effects, which is determined by the parameter $\beta$.
 Taken together, the difference equation that determines changes in population size is
 
 \begin{align}
-  &N_i(t+1) = \\ \nonumber
-  &\left((1-m)N_i(t) + m N_j(t) \right){\rm e}^{-Z} \\ \nonumber
-  &+ R_i[w_i\mu_i(t) + (1-w_i)\mu_j(t)]\left((1-m)N_i + mN_j\right) \\ \nonumber
-  &\times {\rm e}^{-\beta ((1-m)N_i(t) + m N_j(t))},
+  &N_i(t+1) = R_i[\omega_i\mu_i(t) + (1-\omega_i)\mu_j(t),\theta_i] \\ \nonumber
+  &\times \left((1-m)N_i + mN_j\right){\rm e}^{-\beta ((1-m)N_i(t) + m N_j(t))},
   \label{eq:N}
 \end{align}
 
-\noindent where
+\noindent where it is assumed that $Z>0$ and that
 
 \begin{equation}
-w_i=\frac{(1-m)N_i(t)}{(1-m) N_i(t) + m N_j(t)},
+\omega_i=\frac{(1-m)N_i(t)}{(1-m) N_i(t) + m N_j(t)},
 \end{equation} 
 and the equation for $N_j$ mirrors that for $N_i$.
 
 The recruitment of local individuals $(1-m)N_i(t)$ as a function of their mean trait value at time $t$ and the local trait optimum, is
 
 \begin{align}
-  &R_i[w_i\mu_i(t) + (1-w_i)\mu_j(t)] = \\ \nonumber
-  &\int_{-\infty}^\infty r_{\rm max}\exp\left\{\frac{(x_i-\theta_i)^2}{2\tau^2}\right\} {\rm pr}(x_i,w_i\mu_i(t) + (1-w_i)\mu_j(t),\sigma^2) {\rm d}x_i +\tilde{P}_i\\ \nonumber
-  &= \frac{r_{\rm max} \tau  }{\sqrt{\sigma ^2+\tau ^2}}\exp\left\{-\frac{(\theta_i-(w_i\mu_i(t) + (1-w_i)\mu_j(t)))^2}{2 \left(\sigma ^2+\tau ^2\right)}\right\} +\tilde{P}_i,
+  &R_i[\omega_i\mu_i(t) + (1-\omega_i)\mu_j(t),\theta_i] = \\ \nonumber
+  &\int_{-\infty}^\infty r_{\rm max}\exp\left\{\frac{(x_i-\theta_i)^2}{2\tau^2}\right\} {\rm pr}(x_i,\omega_i\mu_i(t) + (1-\omega_i)\mu_j(t),\sigma^2) {\rm d}x_i +\tilde{P}_i\\ \nonumber
+  &= \frac{r_{\rm max} \tau  }{\sqrt{\sigma ^2+\tau ^2}}\exp\left\{-\frac{(\theta_i-(\omega_i\mu_i(t) + (1-\omega_i)\mu_j(t)))^2}{2 \left(\sigma ^2+\tau ^2\right)}\right\} +\tilde{P}_i.
 \end{align}
 
 \noindent where the mismatch between the local trait mean $\mu_i(t)$ and the local optimum $\theta_i$ scales the recruitment rate for the population, and $\tilde{P}_i\sim {\rm Normal}(0,0.01)$ introduces a small amount of demographic error.
@@ -243,7 +241,7 @@ Recent studies of wild sockeye salmon have indeed found that straying individual
 Because individuals from the local population are mixed with individuals from the remote population via straying and subsequent reproduction, the resulting trait distribution is a complex mixture of trait distributions (see Supplemental Materials: Appendix I for the derivation, Fig. \ref{fig:PDF}).
 We make two simplifying assumptions.
 First, we approximate the distribution resulting from the mix of remote and local individuals following reproduction as a Gaussian where $X_i=x_i$ with probability $g(x_i)$.
-The expectation of the actual trait distribution as well as the Gaussian approximation are the same, such that ${\rm E}\{g(x_i)\} = w_i\mu_i + (1-w_i)\mu_j$, with weights corresponding to the proportion of the mixed population that are local individuals, $w_i$, and straying individuals, $1-w_i$.
+The expectation of the actual trait distribution as well as the Gaussian approximation are the same, such that ${\rm E}\{g(x_i)\} = \omega_i\mu_i + (1-\omega_i)\mu_j$, with weights corresponding to the proportion of the mixed population that are local individuals, $\omega_i$, and straying individuals, $1-\omega_i$.
 We show that the Gaussian approximation is not only exact with respect to the mean, but also is a good approximation of variance in most relevant cases (see Appendix I in the Supplemental Materials, Fig. \ref{fig:PDF}).
 Thus, strays can successfully reproduce and introduce their genotypes into the recipient population, which is supported by observations in wild populations \citep{Jasper:2013cc}.
 Secondly, we assumed that changes in trait variance through time are minimal, such that $\sigma^2$ is constant over time, which is a common simplification in eco-evolutionary models of population dynamics \citep{Lande:1976ga,Schreiber:2011wx,Gilbert:2014ee,Gibert:2015kc}.
@@ -255,15 +253,11 @@ Following Lande \citep{Lande:1976ga}, and given our assumption of trait distribu
 
 \begin{align}
   \label{eq:mu}
-  \mu_i(t+1) &= w_i\mu_i(t) + (1-w_i)\mu_j(t) \\ \nonumber
-  &+ h^2\sigma^2\frac{\partial}{\partial \mu_i}\ln\left(R_i[w_i \mu_i(t)+ (1-w_i)\mu_j(t)] \right),
+  \mu_i(t+1) &= \omega_i\mu_i(t) + (1-\omega_i)\mu_j(t) + h^2\sigma^2\frac{\partial}{\partial \mu^\prime}\ln\left(R_i[\mu^\prime,\theta_i] \right), \\ \nonumber
+  &= \omega_i\mu_i(t) + (1-\omega_i)\mu_j(t) + h^2\sigma^2\left(\frac{\theta_i - \omega_i\mu_i - (1-\omega_i)\mu_j}{\sigma^2+\tau^2} \right),
 \end{align}
-
-\noindent where the first two components determine the mixed normal average of the aggregated local and remote populations.
-The partial derivative in Eq. \ref{eq:mu} determines how the mean trait changes through time due to natural selection \citep{Lande:1976ga}, which is proportional to the change in mean fitness with respect to $\mu_i$.
-We note that the derivative is dependent on both $\mu_i$ and $\mu_j$ due to the influence of the logarithm on the sum.
-%Comparison to the Ronce and Kirkpatrick paper
-This model formulation has parallels to that proposed by Ronce and Kirkpatrick \citep{Ronce:2001dp}, where habitat specialization evolves between two populations as a function of dispersal, yet differs in that we treat trait evolution mechanistically at some cost to analytical tractability.
+given $\mu^\prime = \omega_i \mu_i(t)+ (1-\omega_i)\mu_j(t)$.
+This model formulation parallels that proposed by Ronce and Kirkpatrick \citep{Ronce:2001dp}, where habitat specialization evolves between two populations as a function of dispersal.
 \\
 
 \noindent {\bf (b) Density-dependent straying}
@@ -619,382 +613,382 @@ We suggest that understanding the spatial complexity of metapopulations dispersi
 \\
 \noindent {\bf Acknowledgements:} We thank Sean Anderson for helpful discussions and comments on the manuscript. We also thank the guest editors Andrew Berdahl, Dora Biro, and Colin Torney, for inviting us to contribute to this themed issue, and two anonymous reviewers for their insightful comments and critiques. J.D.Y. was supported by startup funds at the University of California, Merced and an Omidyar Postdoctoral Fellowship at the Santa Fe Institute. J.P.G. was supported by a James S. McDonnell Foundation Postdoctoral Fellowship in Complex Systems at the University of California, Merced. P.A.H.W. was supported by the UA Foundation at the University of Alaska Fairbanks. J.W.M. was supported by the Liber Ero Research Chair in Coastal Science and Management at Simon Fraser University.
 
-% \bibliography{aa_kevin}
-\begin{thebibliography}{10}
-\expandafter\ifx\csname urlstyle\endcsname\relax
-  \providecommand{\doi}[1]{doi:\discretionary{}{}{}#1}\else
-  \providecommand{\doi}{doi:\discretionary{}{}{}\begingroup
-  \urlstyle{rm}\Url}\fi
-
-\bibitem{Brown:1977gk}
-Brown JH, Kodric-Brown A, 1977 {Turnover rates in insular biogeography: effect
-  of immigration on extinction}.
-\newblock \emph{Ecology} \textbf{58}, 445--449
-
-\bibitem{Earn:2000fm}
-Earn DJD, Levin SA, Rohani P, 2000 {Coherence and conservation}.
-\newblock \emph{Science} \textbf{290}, 1360--1364
-
-\bibitem{Anonymous:2015gf}
-Schindler DE, Armstrong JB, Reed TE, 2015 {The portfolio concept in ecology and
-  evolution}.
-\newblock \emph{Front. Ecol. Environ.} \textbf{13}, 257--263
-
-\bibitem{Abbott:2017hl}
-Abbott RE, Doak DF, Peterson ML, 2017 {Portfolio effects, climate change, and
-  the persistence of small populations: analyses on the rare plant Saussurea
-  weberi.}
-\newblock \emph{Ecology} \textbf{98}, 1071--1081
-
-\bibitem{Thibaut:2012km}
-Thibaut LM, Connolly SR, 2013 {Understanding diversity-stability relationships:
-  towards a unified model of portfolio effects.}
-\newblock \emph{Ecol. Lett.} \textbf{16}, 140--150
-
-\bibitem{MilnerGulland:2011vm}
-Milner-Gulland EJ, Fryxell JM, Sinclair ARE, 2011 \emph{{Animal Migration}}.
-\newblock Oxford: Oxford University Press
-
-\bibitem{Bell:2011ki}
-Bell G, Gonzalez A, 2011 {Adaptation and evolutionary rescue in metapopulations
-  experiencing environmental deterioration}.
-\newblock \emph{Science} \textbf{332}, 1327--1330
-
-\bibitem{Carlson:2014is}
-Carlson SM, Cunningham CJ, Westley PAH, 2014 {Evolutionary rescue in a changing
-  world}.
-\newblock \emph{Trends Ecol. Evol.} \textbf{29}, 521--530
-
-\bibitem{Muhlfeld:2014hs}
-Muhlfeld CC, Kovach RP, Jones LA, Al-Chokhachy R, Boyer MC, Leary RF, Lowe WH,
-  Luikart G, Allendorf FW, 2014 {Invasive hybridization in a threatened species
-  is accelerated by climate change}.
-\newblock \emph{Nature Climate Change} \textbf{4}, 620--624
-
-\bibitem{Lowe:2015ft}
-Lowe WH, Muhlfeld CC, Allendorf FW, 2015 {Spatial sorting promotes the spread
-  of maladaptive hybridization}.
-\newblock \emph{Trends Ecol. Evol.} \textbf{30}, 456--462
-
-\bibitem{H:2013fs}
-Westley PAH, Quinn TP, 2013 {Rates of straying by hatchery-produced Pacific
-  salmon (\emph{Oncorhynchus} spp.) and steelhead (\emph{Oncorhynchus mykiss})
-  differ among species, life history types, and populations}.
-\newblock \emph{Can. J. Fish. Aquat. Sci.} \textbf{70}, 735--746
-
-\bibitem{Keefer:2014gg}
-Keefer ML, Caudill CC, 2014 {Homing and straying by anadromous salmonids: a
-  review of mechanisms and rates}.
-\newblock \emph{Rev Fish Biol Fisher} \textbf{24}, 333--368
-
-\bibitem{Bett:2017ha}
-Bett NN, Hinch SG, Burnett NJ, Donaldson MR, Naman SM, 2017 {Causes and
-  consequences of straying into small populations of Pacific salmon}.
-\newblock \emph{Fisheries} \textbf{42}, 220--230
-
-\bibitem{Berdahl:2015kv}
-Berdahl A, Torney CJ, Schertzer E, Levin SA, 2015 {On the evolutionary
-  interplay between dispersal and local adaptation in heterogeneous
-  environments}.
-\newblock \emph{Evolution} \textbf{69}, 1390--1405
-
-\bibitem{Berdahl:2016dx}
-Berdahl A, 2016 {Collective behavior as a driver of critical transitions in
-  migratory populations}.
-\newblock \emph{Movement Ecology} \textbf{4}, 1--12
-
-\bibitem{HardestyMoore:wg}
-Hardesty-Moore M, \emph{et~al.}, 2017 {Migration in the Anthropocene}.
-\newblock \emph{Philos. T. Roy. Soc. B} \textbf{This volume}
-
-\bibitem{Simons:2004jo}
-Simons AM, 2004 {Many wrongs: The advantage of group navigation}.
-\newblock \emph{Trends Ecol. Evol.} \textbf{19}, 453--455
-
-\bibitem{Brenner:2012gl}
-Brenner RE, Moffitt SD, Grant WS, 2012 {Straying of hatchery salmon in Prince
-  William Sound, Alaska}.
-\newblock \emph{Environ Biol Fish} \textbf{94}, 179--195
-
-\bibitem{Johnson:2012fe}
-Johnson RC, Weber PK, Wikert JD, Workman ML, MacFarlane RB, Grove MJ, Schmitt
-  AK, 2012 {Managed metapopulations: do salmon hatchery
-  {\textquoteleft}sources{\textquoteright} lead to in-river
-  {\textquoteleft}sinks{\textquoteright} in conservation?}
-\newblock \emph{PLoS ONE} \textbf{7}, e28880--11
-
-\bibitem{Fullerton:2011ii}
-Fullerton AH, Lindley ST, Pess GR, Feist BE, Steel EA, Mcelhany P, 2011 {Human
-  influence on the spatial structure of threatened Pacific salmon
-  metapopulations}.
-\newblock \emph{Conserv Biol} \textbf{25}, 932--944
-
-\bibitem{Quinn:2011tf}
-Quinn TP, 2011 \emph{{The Behavior and Ecology of Pacific Salmon and Trout}}.
-\newblock Vancouver: UBC Press
-
-\bibitem{Jonsson:2011kg}
-Jonsson B, Jonsson N, 2011 \emph{{Ecology of Atlantic Salmon and Brown Trout}}.
-\newblock Dordrecht: Springer Netherlands
-
-\bibitem{Quinn:1993ge}
-Quinn TP, 1993 {A review of homing and straying of wild and hatchery-produced
-  salmon}.
-\newblock \emph{Fish Res} \textbf{18}, 29--44
-
-\bibitem{Hendry:2004wf}
-Hendry AP, Bohlin T, Jonsson B, Berg OK, 2004 {The evolution of philopatry and
-  dispersal: homing versus straying in salmonids}.
-\newblock In AP~Hendry, SC~Stearns, eds., \emph{Evolution Illuminated}. Oxford:
-  Oxford University Press on Demand
-
-\bibitem{Schtickzelle:2007wb}
-Schtickzelle N, Quinn TP, 2007 {A metapopulation perspective for salmon and
-  other anadromous fish}.
-\newblock \emph{Fish Fish.} \textbf{8}, 297--314
-
-\bibitem{Anderson:2014cx}
-Anderson SC, Moore JW, McClure MM, Dulvy NK, Cooper AB, 2015 {Portfolio
-  conservation of metapopulations under climate change}.
-\newblock \emph{Ecol. Appl.} \textbf{25}, 559--572
-
-\bibitem{Keefer:2008bs}
-Keefer ML, Caudill CC, Peery CA, Lee SR, 2008 {Transporting juvenile salmonids
-  around dams impairs adult migration}.
-\newblock \emph{Ecol. Appl.} \textbf{18}, 1888--1900
-
-\bibitem{Westley:2015to}
-Westley PAH, Dittman AH, Ward EJ, Quinn TP, 2015 {Signals of climate,
-  conspecific density, and watershed features in patterns of homing and
-  dispersal by Pacific salmon.}
-\newblock \emph{Ecology} \textbf{96}, 2823--2833
-
-\bibitem{Bond:2016dz}
-Bond MH, Westley PAH, Dittman AH, Holecek D, Marsh T, Quinn TP, 2016 {Combined
-  effects of barge transportation, river environment, and rearing location on
-  straying and migration of adult snake river fall-run Chinook salmon}.
-\newblock \emph{T Am Fish Soc} \textbf{146}, 60--73
-
-\bibitem{Peterson:2014gy}
-Peterson DA, Hilborn R, Hauser L, 2014 {Local adaptation limits lifetime
-  reproductive success of dispersers in a wild salmon metapopulation}.
-\newblock \emph{Nat Commun} \textbf{5}, 3696
-
-\bibitem{Berdahl:2017uu}
-Berdahl A, 2017 {Berdahl et al. contribution}.
-\newblock \emph{Philos. T. Roy. Soc. B} \textbf{This volume}
-
-\bibitem{Moore:2010gs}
-Moore JW, McClure M, Rogers LA, Schindler DE, 2010 {Synchronization and
-  portfolio performance of threatened salmon}.
-\newblock \emph{Conserv. Lett.} \textbf{3}, 340--348
-
-\bibitem{Carlson:2011ce}
-Carlson SM, Satterthwaite WH, Fleming IA, 2011 {Weakened portfolio effect in a
-  collapsed salmon population complex}.
-\newblock \emph{Can. J. Fish. Aquat. Sci.} \textbf{68}, 1579--1589
-
-\bibitem{Braun:2016ib}
-Braun DC, Moore JW, Candy J, Bailey RE, 2016 {Population diversity in salmon:
-  linkages among response, genetic and life history diversity}.
-\newblock \emph{Ecography} \textbf{39}, 317--328
-
-\bibitem{simpson1953major}
-Simpson GG, 1953 \emph{{The Major Features of Evolution}}.
-\newblock New York: Simon and Schuster
-
-\bibitem{Lande:1976ga}
-Lande R, 1976 {Natural selection and random genetic drift in phenotypic
-  evolution}.
-\newblock \emph{Evolution} \textbf{30}, 314--334
-
-\bibitem{Shelton:2011eq}
-Shelton AO, Mangel M, 2011 {Fluctuations of fish populations and the magnifying
-  effects of fishing.}
-\newblock \emph{Proc. Natl. Acad. Sci. USA} \textbf{108}, 7075--7080
-
-\bibitem{Jasper:2013cc}
-Jasper JR, Habicht C, Moffitt S, Brenner R, Marsh J, Lewis B, Fox EC, Grauvogel
-  Z, Olive SDR, Grant WS, 2013 {Source-sink estimates of genetic introgression
-  show influence of hatchery strays on wild chum salmon populations in Prince
-  William Sound, Alaska}.
-\newblock \emph{PLoS ONE} \textbf{8}, e81916
-
-\bibitem{Schreiber:2011wx}
-Schreiber SJ, B{\"u}rger R, Bolnick DI, 2011 {The community effects of
-  phenotypic and genetic variation within a predator population.}
-\newblock \emph{Ecology} \textbf{92}, 1582--1593
-
-\bibitem{Gilbert:2014ee}
-Gibert JP, Brassil CE, 2014 {Individual phenotypic variation reduces
-  interaction strengths in a consumer{\textendash}resource system}.
-\newblock \emph{Ecol Evol} \textbf{4}, 3703--3713
-
-\bibitem{Gibert:2015kc}
-Gibert JP, DeLong JP, 2015 {Individual variation decreases interference
-  competition but increases species persistence}.
-\newblock \emph{Adv Ecol Res} \textbf{52}, 45--64
-
-\bibitem{Ronce:2001dp}
-Ronce O, Kirkpatrick M, 2001 {When sources become sinks: migrational meltdown
-  in heterogeneous habitats}.
-\newblock \emph{Evolution} \textbf{55}, 1520
-
-\bibitem{Berdahl:2014bl}
-Berdahl A, Westley PAH, Levin SA, Couzin ID, Quinn TP, 2014 {A collective
-  navigation hypothesis for homeward migration in anadromous salmonids}.
-\newblock \emph{Fish Fish.} \textbf{17}, 525--542
-
-\bibitem{Candy:2000hu}
-Candy JR, Beacham TD, 2000 {Patterns of homing and straying in southern British
-  Columbia coded-wire tagged Chinook salmon (\emph{Oncorhynchus tshawytscha})
-  populations}.
-\newblock \emph{Fish Res} \textbf{47}, 41--56
-
-\bibitem{JPE:JPE1383}
-Schick RS, Lindley ST, 2007 {Directed connectivity among fish populations in a
-  riverine network}.
-\newblock \emph{J. Appl. Ecol.} \textbf{44}, 1116--1126
-
-\bibitem{Schindler:2015gf}
-Schindler DE, Armstrong JB, Reed TE, 2015 {The portfolio concept in ecology and
-  evolution}.
-\newblock \emph{Front. Ecol. Environ.} \textbf{13}, 257--263
-
-\bibitem{Ovaskainen:2002il}
-Ovaskainen O, Hanski I, 2002 {Transient dynamics in metapopulation response to
-  perturbation}.
-\newblock \emph{Theor Popul Biol} \textbf{61}, 285--295
-
-\bibitem{Anderson:2013gb}
-Anderson SC, Cooper AB, Dulvy NK, 2013 {Ecological prophets: quantifying
-  metapopulation portfolio effects}.
-\newblock \emph{Methods Ecol Evol} \textbf{4}, 971--981
-
-\bibitem{Loreau:2008ju}
-Loreau M, de~Mazancourt C, 2008 {Species synchrony and its drivers: neutral and
-  nonneutral community dynamics in fluctuating environments}.
-\newblock \emph{Am. Nat.} \textbf{172}, E48--E66
-
-\bibitem{Yeakel:2013vz}
-Yeakel JD, Moore JW, Guimar{\~a}es~Jr PR, de~Aguiar MAM, 2014 {Synchronisation
-  and stability in river metapopulation networks}.
-\newblock \emph{Ecol. Lett.} \textbf{17}, 273--283
-
-\bibitem{GuckHolmes}
-Guckenheimer J, Holmes P, 1983 \emph{{Nonlinear Oscillations, Dynamical
-  Systems, and Bifurcations of Vector Fields}}.
-\newblock New York: Springer
-
-\bibitem{AleksandrovichKuznetsov:1995p2580}
-Kuznetsov Y, 1998 \emph{{Elements of Applied Bifurcation Theory}}.
-\newblock New York: Springer
-
-\bibitem{Carlson:2008hl}
-Carlson SM, Seamons TR, 2008 {A review of quantitative genetic components of
-  fitness in salmonids: implications for adaptation to future change}.
-\newblock \emph{Evol Appl} \textbf{1}, 222--238
-
-\bibitem{Scheffer:2009gg}
-Scheffer M, Bascompte J, Brock WA, Brovkin V, Carpenter SR, Dakos V, Held H,
-  van Nes EH, Rietkerk M, Sugihara G, 2009 {Early-warning signals for critical
-  transitions}.
-\newblock \emph{Nature} \textbf{461}, 53--59
-
-\bibitem{Lade:2012eu}
-Lade SJ, Gross T, 2012 {Early warning signals for critical transitions: A
-  generalized modeling approach}.
-\newblock \emph{PLoS Comp. Biol.} \textbf{8}, e1002360
-
-\bibitem{Anonymous:2013br}
-Boettiger C, Ross N, Hastings A, 2013 {Early warning signals: the charted and
-  uncharted territories}.
-\newblock \emph{Theor. Ecol.} \textbf{6}, 255--264
-
-\bibitem{Dakos:2014br}
-Dakos V, Bascompte J, 2014 {Critical slowing down as early warning for the
-  onset of collapse in mutualistic communities}.
-\newblock \emph{Proc. Natl. Acad. Sci. USA} \textbf{111}, 17546--17551
-
-\bibitem{Krkosek:2014ch}
-Krko{\v s}ek M, Drake JM, 2014 {On signals of phase transitions in salmon
-  population dynamics}.
-\newblock \emph{Proc. Roy. Soc. B} \textbf{281}, 20133221
-
-\bibitem{Kuehn:2010p2591}
-Kuehn C, 2011 {A mathematical framework for critical transitions: bifurcations,
-  fast-slow systems and stochastic dynamics}.
-\newblock \emph{Physica D} \textbf{240}, 1020--1035
-
-\bibitem{Donohue:2013iu}
-Donohue I, Petchey OL, Montoya JM, Jackson AL, McNally L, Viana M, Healy K,
-  Lurgi M, O'Connor NE, Emmerson MC, 2013 {On the dimensionality of ecological
-  stability.}
-\newblock \emph{Ecol. Lett.} \textbf{16}, 421--429
-
-\bibitem{Secor:2009ena}
-Secor DH, Kerr LA, Cadrin SX, 2009 {Connectivity effects on productivity,
-  stability, and persistence in a herring metapopulation model}.
-\newblock \emph{ICES J Mar Sci} \textbf{66}, 1726--1732
-
-\bibitem{Christie:2012bj}
-Christie MR, Marine ML, French RA, Blouin MS, 2012 {Genetic adaptation to
-  captivity can occur in a single generation.}
-\newblock \emph{Proc. Natl. Acad. Sci. USA} \textbf{109}, 238--242
-
-\bibitem{Chilcote:2003bb}
-Chilcote MW, 2003 {Relationship between natural productivity and the frequency
-  of wild fish in mixed spawning populations of wild and hatchery steelhead
-  (\emph{Oncorhynchus mykiss})}.
-\newblock \emph{Can. J. Fish. Aquat. Sci.} \textbf{60}, 1057--1067
-
-\bibitem{Araki:2007cm}
-Araki H, Cooper B, Blouin MS, 2007 {Genetic effects of captive breeding cause a
-  rapid, cumulative fitness decline in the wild}.
-\newblock \emph{Science} \textbf{318}, 100--103
-
-\bibitem{Reisenbichler:1988ex}
-Reisenbichler RR, 1988 {Relation between Distance Transferred from Natal Stream
-  and Recovery Rate for Hatchery Coho Salmon}.
-\newblock \emph{N. Am. J. Fish. Manage.} \textbf{8}, 172--174
-
-\bibitem{Fraser:2011co}
-Fraser DJ, Weir LK, Bernatchez L, Hansen MM, Taylor EB, 2011 {Extent and scale
-  of local adaptation in salmonid fishes: review and meta-analysis.}
-\newblock \emph{Heredity} \textbf{106}, 404--420
-
-\bibitem{Westley:2012ui}
-Westley PAH, { Corinne M Conway}, Fleming IA, 2012 {Phenotypic divergence of
-  exotic fish populations is shaped by spatial proximity and habitat
-  differences across an invaded landscape}.
-\newblock \emph{Evol. Ecol. Res.} \textbf{14}, 147--167
-
-\bibitem{Anderson:2013bf}
-Anderson JH, Faulds PL, Atlas WI, Quinn TP, 2013 {Reproductive success of
-  captively bred and naturally spawned Chinook salmon colonizing newly
-  accessible habitat}.
-\newblock \emph{Evol Appl} \textbf{6}, 165--179
-
-\bibitem{Pess:2014isa}
-Pess GR, Quinn TP, Gephard SR, Saunders R, 2014 {Re-colonization of Atlantic
-  and Pacific rivers by anadromous fishes: linkages between life history and
-  the benefits of barrier removal}.
-\newblock \emph{Rev Fish Biol Fisher} \textbf{24}, 881--900
-
-\bibitem{Ford:2002ip}
-Ford MJ, 2002 {Selection in captivity during supportive breeding may reduce
-  fitness in the wild}.
-\newblock \emph{Conserv Biol} \textbf{16}, 815--825
-
-\bibitem{Liermann:2017gj}
-Liermann M, PESS G, McHenry M, McMillan J, Elofson M, Bennett T, Moses R, 2017
-  {Relocation and recolonization of Coho salmon \emph{Oncorhynchus kisutch} in
-  two tributaries to the elwha river: Implications for management and
-  monitoring}.
-\newblock \emph{T Am Fish Soc} \textbf{17}, 1--39
-
-\end{thebibliography}
-
+\bibliography{aa_kevin}
+% \begin{thebibliography}{10}
+% \expandafter\ifx\csname urlstyle\endcsname\relax
+%   \providecommand{\doi}[1]{doi:\discretionary{}{}{}#1}\else
+%   \providecommand{\doi}{doi:\discretionary{}{}{}\begingroup
+%   \urlstyle{rm}\Url}\fi
+% 
+% \bibitem{Brown:1977gk}
+% Brown JH, Kodric-Brown A, 1977 {Turnover rates in insular biogeography: effect
+%   of immigration on extinction}.
+% \newblock \emph{Ecology} \textbf{58}, 445--449
+% 
+% \bibitem{Earn:2000fm}
+% Earn DJD, Levin SA, Rohani P, 2000 {Coherence and conservation}.
+% \newblock \emph{Science} \textbf{290}, 1360--1364
+% 
+% \bibitem{Anonymous:2015gf}
+% Schindler DE, Armstrong JB, Reed TE, 2015 {The portfolio concept in ecology and
+%   evolution}.
+% \newblock \emph{Front. Ecol. Environ.} \textbf{13}, 257--263
+% 
+% \bibitem{Abbott:2017hl}
+% Abbott RE, Doak DF, Peterson ML, 2017 {Portfolio effects, climate change, and
+%   the persistence of small populations: analyses on the rare plant Saussurea
+%   weberi.}
+% \newblock \emph{Ecology} \textbf{98}, 1071--1081
+% 
+% \bibitem{Thibaut:2012km}
+% Thibaut LM, Connolly SR, 2013 {Understanding diversity-stability relationships:
+%   towards a unified model of portfolio effects.}
+% \newblock \emph{Ecol. Lett.} \textbf{16}, 140--150
+% 
+% \bibitem{MilnerGulland:2011vm}
+% Milner-Gulland EJ, Fryxell JM, Sinclair ARE, 2011 \emph{{Animal Migration}}.
+% \newblock Oxford: Oxford University Press
+% 
+% \bibitem{Bell:2011ki}
+% Bell G, Gonzalez A, 2011 {Adaptation and evolutionary rescue in metapopulations
+%   experiencing environmental deterioration}.
+% \newblock \emph{Science} \textbf{332}, 1327--1330
+% 
+% \bibitem{Carlson:2014is}
+% Carlson SM, Cunningham CJ, Westley PAH, 2014 {Evolutionary rescue in a changing
+%   world}.
+% \newblock \emph{Trends Ecol. Evol.} \textbf{29}, 521--530
+% 
+% \bibitem{Muhlfeld:2014hs}
+% Muhlfeld CC, Kovach RP, Jones LA, Al-Chokhachy R, Boyer MC, Leary RF, Lowe WH,
+%   Luikart G, Allendorf FW, 2014 {Invasive hybridization in a threatened species
+%   is accelerated by climate change}.
+% \newblock \emph{Nature Climate Change} \textbf{4}, 620--624
+% 
+% \bibitem{Lowe:2015ft}
+% Lowe WH, Muhlfeld CC, Allendorf FW, 2015 {Spatial sorting promotes the spread
+%   of maladaptive hybridization}.
+% \newblock \emph{Trends Ecol. Evol.} \textbf{30}, 456--462
+% 
+% \bibitem{H:2013fs}
+% Westley PAH, Quinn TP, 2013 {Rates of straying by hatchery-produced Pacific
+%   salmon (\emph{Oncorhynchus} spp.) and steelhead (\emph{Oncorhynchus mykiss})
+%   differ among species, life history types, and populations}.
+% \newblock \emph{Can. J. Fish. Aquat. Sci.} \textbf{70}, 735--746
+% 
+% \bibitem{Keefer:2014gg}
+% Keefer ML, Caudill CC, 2014 {Homing and straying by anadromous salmonids: a
+%   review of mechanisms and rates}.
+% \newblock \emph{Rev Fish Biol Fisher} \textbf{24}, 333--368
+% 
+% \bibitem{Bett:2017ha}
+% Bett NN, Hinch SG, Burnett NJ, Donaldson MR, Naman SM, 2017 {Causes and
+%   consequences of straying into small populations of Pacific salmon}.
+% \newblock \emph{Fisheries} \textbf{42}, 220--230
+% 
+% \bibitem{Berdahl:2015kv}
+% Berdahl A, Torney CJ, Schertzer E, Levin SA, 2015 {On the evolutionary
+%   interplay between dispersal and local adaptation in heterogeneous
+%   environments}.
+% \newblock \emph{Evolution} \textbf{69}, 1390--1405
+% 
+% \bibitem{Berdahl:2016dx}
+% Berdahl A, 2016 {Collective behavior as a driver of critical transitions in
+%   migratory populations}.
+% \newblock \emph{Movement Ecology} \textbf{4}, 1--12
+% 
+% \bibitem{HardestyMoore:wg}
+% Hardesty-Moore M, \emph{et~al.}, 2017 {Migration in the Anthropocene}.
+% \newblock \emph{Philos. T. Roy. Soc. B} \textbf{This volume}
+% 
+% \bibitem{Simons:2004jo}
+% Simons AM, 2004 {Many wrongs: The advantage of group navigation}.
+% \newblock \emph{Trends Ecol. Evol.} \textbf{19}, 453--455
+% 
+% \bibitem{Brenner:2012gl}
+% Brenner RE, Moffitt SD, Grant WS, 2012 {Straying of hatchery salmon in Prince
+%   William Sound, Alaska}.
+% \newblock \emph{Environ Biol Fish} \textbf{94}, 179--195
+% 
+% \bibitem{Johnson:2012fe}
+% Johnson RC, Weber PK, Wikert JD, Workman ML, MacFarlane RB, Grove MJ, Schmitt
+%   AK, 2012 {Managed metapopulations: do salmon hatchery
+%   {\textquoteleft}sources{\textquoteright} lead to in-river
+%   {\textquoteleft}sinks{\textquoteright} in conservation?}
+% \newblock \emph{PLoS ONE} \textbf{7}, e28880--11
+% 
+% \bibitem{Fullerton:2011ii}
+% Fullerton AH, Lindley ST, Pess GR, Feist BE, Steel EA, Mcelhany P, 2011 {Human
+%   influence on the spatial structure of threatened Pacific salmon
+%   metapopulations}.
+% \newblock \emph{Conserv Biol} \textbf{25}, 932--944
+% 
+% \bibitem{Quinn:2011tf}
+% Quinn TP, 2011 \emph{{The Behavior and Ecology of Pacific Salmon and Trout}}.
+% \newblock Vancouver: UBC Press
+% 
+% \bibitem{Jonsson:2011kg}
+% Jonsson B, Jonsson N, 2011 \emph{{Ecology of Atlantic Salmon and Brown Trout}}.
+% \newblock Dordrecht: Springer Netherlands
+% 
+% \bibitem{Quinn:1993ge}
+% Quinn TP, 1993 {A review of homing and straying of wild and hatchery-produced
+%   salmon}.
+% \newblock \emph{Fish Res} \textbf{18}, 29--44
+% 
+% \bibitem{Hendry:2004wf}
+% Hendry AP, Bohlin T, Jonsson B, Berg OK, 2004 {The evolution of philopatry and
+%   dispersal: homing versus straying in salmonids}.
+% \newblock In AP~Hendry, SC~Stearns, eds., \emph{Evolution Illuminated}. Oxford:
+%   Oxford University Press on Demand
+% 
+% \bibitem{Schtickzelle:2007wb}
+% Schtickzelle N, Quinn TP, 2007 {A metapopulation perspective for salmon and
+%   other anadromous fish}.
+% \newblock \emph{Fish Fish.} \textbf{8}, 297--314
+% 
+% \bibitem{Anderson:2014cx}
+% Anderson SC, Moore JW, McClure MM, Dulvy NK, Cooper AB, 2015 {Portfolio
+%   conservation of metapopulations under climate change}.
+% \newblock \emph{Ecol. Appl.} \textbf{25}, 559--572
+% 
+% \bibitem{Keefer:2008bs}
+% Keefer ML, Caudill CC, Peery CA, Lee SR, 2008 {Transporting juvenile salmonids
+%   around dams impairs adult migration}.
+% \newblock \emph{Ecol. Appl.} \textbf{18}, 1888--1900
+% 
+% \bibitem{Westley:2015to}
+% Westley PAH, Dittman AH, Ward EJ, Quinn TP, 2015 {Signals of climate,
+%   conspecific density, and watershed features in patterns of homing and
+%   dispersal by Pacific salmon.}
+% \newblock \emph{Ecology} \textbf{96}, 2823--2833
+% 
+% \bibitem{Bond:2016dz}
+% Bond MH, Westley PAH, Dittman AH, Holecek D, Marsh T, Quinn TP, 2016 {Combined
+%   effects of barge transportation, river environment, and rearing location on
+%   straying and migration of adult snake river fall-run Chinook salmon}.
+% \newblock \emph{T Am Fish Soc} \textbf{146}, 60--73
+% 
+% \bibitem{Peterson:2014gy}
+% Peterson DA, Hilborn R, Hauser L, 2014 {Local adaptation limits lifetime
+%   reproductive success of dispersers in a wild salmon metapopulation}.
+% \newblock \emph{Nat Commun} \textbf{5}, 3696
+% 
+% \bibitem{Berdahl:2017uu}
+% Berdahl A, 2017 {Berdahl et al. contribution}.
+% \newblock \emph{Philos. T. Roy. Soc. B} \textbf{This volume}
+% 
+% \bibitem{Moore:2010gs}
+% Moore JW, McClure M, Rogers LA, Schindler DE, 2010 {Synchronization and
+%   portfolio performance of threatened salmon}.
+% \newblock \emph{Conserv. Lett.} \textbf{3}, 340--348
+% 
+% \bibitem{Carlson:2011ce}
+% Carlson SM, Satterthwaite WH, Fleming IA, 2011 {Weakened portfolio effect in a
+%   collapsed salmon population complex}.
+% \newblock \emph{Can. J. Fish. Aquat. Sci.} \textbf{68}, 1579--1589
+% 
+% \bibitem{Braun:2016ib}
+% Braun DC, Moore JW, Candy J, Bailey RE, 2016 {Population diversity in salmon:
+%   linkages among response, genetic and life history diversity}.
+% \newblock \emph{Ecography} \textbf{39}, 317--328
+% 
+% \bibitem{simpson1953major}
+% Simpson GG, 1953 \emph{{The Major Features of Evolution}}.
+% \newblock New York: Simon and Schuster
+% 
+% \bibitem{Lande:1976ga}
+% Lande R, 1976 {Natural selection and random genetic drift in phenotypic
+%   evolution}.
+% \newblock \emph{Evolution} \textbf{30}, 314--334
+% 
+% \bibitem{Shelton:2011eq}
+% Shelton AO, Mangel M, 2011 {Fluctuations of fish populations and the magnifying
+%   effects of fishing.}
+% \newblock \emph{Proc. Natl. Acad. Sci. USA} \textbf{108}, 7075--7080
+% 
+% \bibitem{Jasper:2013cc}
+% Jasper JR, Habicht C, Moffitt S, Brenner R, Marsh J, Lewis B, Fox EC, Grauvogel
+%   Z, Olive SDR, Grant WS, 2013 {Source-sink estimates of genetic introgression
+%   show influence of hatchery strays on wild chum salmon populations in Prince
+%   William Sound, Alaska}.
+% \newblock \emph{PLoS ONE} \textbf{8}, e81916
+% 
+% \bibitem{Schreiber:2011wx}
+% Schreiber SJ, B{\"u}rger R, Bolnick DI, 2011 {The community effects of
+%   phenotypic and genetic variation within a predator population.}
+% \newblock \emph{Ecology} \textbf{92}, 1582--1593
+% 
+% \bibitem{Gilbert:2014ee}
+% Gibert JP, Brassil CE, 2014 {Individual phenotypic variation reduces
+%   interaction strengths in a consumer{\textendash}resource system}.
+% \newblock \emph{Ecol Evol} \textbf{4}, 3703--3713
+% 
+% \bibitem{Gibert:2015kc}
+% Gibert JP, DeLong JP, 2015 {Individual variation decreases interference
+%   competition but increases species persistence}.
+% \newblock \emph{Adv Ecol Res} \textbf{52}, 45--64
+% 
+% \bibitem{Ronce:2001dp}
+% Ronce O, Kirkpatrick M, 2001 {When sources become sinks: migrational meltdown
+%   in heterogeneous habitats}.
+% \newblock \emph{Evolution} \textbf{55}, 1520
+% 
+% \bibitem{Berdahl:2014bl}
+% Berdahl A, Westley PAH, Levin SA, Couzin ID, Quinn TP, 2014 {A collective
+%   navigation hypothesis for homeward migration in anadromous salmonids}.
+% \newblock \emph{Fish Fish.} \textbf{17}, 525--542
+% 
+% \bibitem{Candy:2000hu}
+% Candy JR, Beacham TD, 2000 {Patterns of homing and straying in southern British
+%   Columbia coded-wire tagged Chinook salmon (\emph{Oncorhynchus tshawytscha})
+%   populations}.
+% \newblock \emph{Fish Res} \textbf{47}, 41--56
+% 
+% \bibitem{JPE:JPE1383}
+% Schick RS, Lindley ST, 2007 {Directed connectivity among fish populations in a
+%   riverine network}.
+% \newblock \emph{J. Appl. Ecol.} \textbf{44}, 1116--1126
+% 
+% \bibitem{Schindler:2015gf}
+% Schindler DE, Armstrong JB, Reed TE, 2015 {The portfolio concept in ecology and
+%   evolution}.
+% \newblock \emph{Front. Ecol. Environ.} \textbf{13}, 257--263
+% 
+% \bibitem{Ovaskainen:2002il}
+% Ovaskainen O, Hanski I, 2002 {Transient dynamics in metapopulation response to
+%   perturbation}.
+% \newblock \emph{Theor Popul Biol} \textbf{61}, 285--295
+% 
+% \bibitem{Anderson:2013gb}
+% Anderson SC, Cooper AB, Dulvy NK, 2013 {Ecological prophets: quantifying
+%   metapopulation portfolio effects}.
+% \newblock \emph{Methods Ecol Evol} \textbf{4}, 971--981
+% 
+% \bibitem{Loreau:2008ju}
+% Loreau M, de~Mazancourt C, 2008 {Species synchrony and its drivers: neutral and
+%   nonneutral community dynamics in fluctuating environments}.
+% \newblock \emph{Am. Nat.} \textbf{172}, E48--E66
+% 
+% \bibitem{Yeakel:2013vz}
+% Yeakel JD, Moore JW, Guimar{\~a}es~Jr PR, de~Aguiar MAM, 2014 {Synchronisation
+%   and stability in river metapopulation networks}.
+% \newblock \emph{Ecol. Lett.} \textbf{17}, 273--283
+% 
+% \bibitem{GuckHolmes}
+% Guckenheimer J, Holmes P, 1983 \emph{{Nonlinear Oscillations, Dynamical
+%   Systems, and Bifurcations of Vector Fields}}.
+% \newblock New York: Springer
+% 
+% \bibitem{AleksandrovichKuznetsov:1995p2580}
+% Kuznetsov Y, 1998 \emph{{Elements of Applied Bifurcation Theory}}.
+% \newblock New York: Springer
+% 
+% \bibitem{Carlson:2008hl}
+% Carlson SM, Seamons TR, 2008 {A review of quantitative genetic components of
+%   fitness in salmonids: implications for adaptation to future change}.
+% \newblock \emph{Evol Appl} \textbf{1}, 222--238
+% 
+% \bibitem{Scheffer:2009gg}
+% Scheffer M, Bascompte J, Brock WA, Brovkin V, Carpenter SR, Dakos V, Held H,
+%   van Nes EH, Rietkerk M, Sugihara G, 2009 {Early-warning signals for critical
+%   transitions}.
+% \newblock \emph{Nature} \textbf{461}, 53--59
+% 
+% \bibitem{Lade:2012eu}
+% Lade SJ, Gross T, 2012 {Early warning signals for critical transitions: A
+%   generalized modeling approach}.
+% \newblock \emph{PLoS Comp. Biol.} \textbf{8}, e1002360
+% 
+% \bibitem{Anonymous:2013br}
+% Boettiger C, Ross N, Hastings A, 2013 {Early warning signals: the charted and
+%   uncharted territories}.
+% \newblock \emph{Theor. Ecol.} \textbf{6}, 255--264
+% 
+% \bibitem{Dakos:2014br}
+% Dakos V, Bascompte J, 2014 {Critical slowing down as early warning for the
+%   onset of collapse in mutualistic communities}.
+% \newblock \emph{Proc. Natl. Acad. Sci. USA} \textbf{111}, 17546--17551
+% 
+% \bibitem{Krkosek:2014ch}
+% Krko{\v s}ek M, Drake JM, 2014 {On signals of phase transitions in salmon
+%   population dynamics}.
+% \newblock \emph{Proc. Roy. Soc. B} \textbf{281}, 20133221
+% 
+% \bibitem{Kuehn:2010p2591}
+% Kuehn C, 2011 {A mathematical framework for critical transitions: bifurcations,
+%   fast-slow systems and stochastic dynamics}.
+% \newblock \emph{Physica D} \textbf{240}, 1020--1035
+% 
+% \bibitem{Donohue:2013iu}
+% Donohue I, Petchey OL, Montoya JM, Jackson AL, McNally L, Viana M, Healy K,
+%   Lurgi M, O'Connor NE, Emmerson MC, 2013 {On the dimensionality of ecological
+%   stability.}
+% \newblock \emph{Ecol. Lett.} \textbf{16}, 421--429
+% 
+% \bibitem{Secor:2009ena}
+% Secor DH, Kerr LA, Cadrin SX, 2009 {Connectivity effects on productivity,
+%   stability, and persistence in a herring metapopulation model}.
+% \newblock \emph{ICES J Mar Sci} \textbf{66}, 1726--1732
+% 
+% \bibitem{Christie:2012bj}
+% Christie MR, Marine ML, French RA, Blouin MS, 2012 {Genetic adaptation to
+%   captivity can occur in a single generation.}
+% \newblock \emph{Proc. Natl. Acad. Sci. USA} \textbf{109}, 238--242
+% 
+% \bibitem{Chilcote:2003bb}
+% Chilcote MW, 2003 {Relationship between natural productivity and the frequency
+%   of wild fish in mixed spawning populations of wild and hatchery steelhead
+%   (\emph{Oncorhynchus mykiss})}.
+% \newblock \emph{Can. J. Fish. Aquat. Sci.} \textbf{60}, 1057--1067
+% 
+% \bibitem{Araki:2007cm}
+% Araki H, Cooper B, Blouin MS, 2007 {Genetic effects of captive breeding cause a
+%   rapid, cumulative fitness decline in the wild}.
+% \newblock \emph{Science} \textbf{318}, 100--103
+% 
+% \bibitem{Reisenbichler:1988ex}
+% Reisenbichler RR, 1988 {Relation between Distance Transferred from Natal Stream
+%   and Recovery Rate for Hatchery Coho Salmon}.
+% \newblock \emph{N. Am. J. Fish. Manage.} \textbf{8}, 172--174
+% 
+% \bibitem{Fraser:2011co}
+% Fraser DJ, Weir LK, Bernatchez L, Hansen MM, Taylor EB, 2011 {Extent and scale
+%   of local adaptation in salmonid fishes: review and meta-analysis.}
+% \newblock \emph{Heredity} \textbf{106}, 404--420
+% 
+% \bibitem{Westley:2012ui}
+% Westley PAH, { Corinne M Conway}, Fleming IA, 2012 {Phenotypic divergence of
+%   exotic fish populations is shaped by spatial proximity and habitat
+%   differences across an invaded landscape}.
+% \newblock \emph{Evol. Ecol. Res.} \textbf{14}, 147--167
+% 
+% \bibitem{Anderson:2013bf}
+% Anderson JH, Faulds PL, Atlas WI, Quinn TP, 2013 {Reproductive success of
+%   captively bred and naturally spawned Chinook salmon colonizing newly
+%   accessible habitat}.
+% \newblock \emph{Evol Appl} \textbf{6}, 165--179
+% 
+% \bibitem{Pess:2014isa}
+% Pess GR, Quinn TP, Gephard SR, Saunders R, 2014 {Re-colonization of Atlantic
+%   and Pacific rivers by anadromous fishes: linkages between life history and
+%   the benefits of barrier removal}.
+% \newblock \emph{Rev Fish Biol Fisher} \textbf{24}, 881--900
+% 
+% \bibitem{Ford:2002ip}
+% Ford MJ, 2002 {Selection in captivity during supportive breeding may reduce
+%   fitness in the wild}.
+% \newblock \emph{Conserv Biol} \textbf{16}, 815--825
+% 
+% \bibitem{Liermann:2017gj}
+% Liermann M, PESS G, McHenry M, McMillan J, Elofson M, Bennett T, Moses R, 2017
+%   {Relocation and recolonization of Coho salmon \emph{Oncorhynchus kisutch} in
+%   two tributaries to the elwha river: Implications for management and
+%   monitoring}.
+% \newblock \emph{T Am Fish Soc} \textbf{17}, 1--39
+% 
+% \end{thebibliography}
+% 
 
 
 \clearpage
